feat: updated for telegram bot
